--- a/openhis-server/openhis-application/src/main/resources/i18n/messages.properties
+++ b/openhis-server/openhis-application/src/main/resources/i18n/messages.properties
@@ -43,3 +43,4 @@ apl.common.M00006=操作失败,该数据已被他人删除,请刷新后重试
 apl.common.M00007=操作失败,该数据已被他人更改,请刷新后重试
 apl.common.M00008=请勿重复提交
 apl.common.M00009=查询成功
+apl.common.M00010=操作失败,请联系管理员
